16th Sept: Spring Student app

--- a/mytasks 23rd Aug/display_player.html
+++ b/mytasks 23rd Aug/display_player.html
@@ -29,7 +29,7 @@
             <tr>
                 <td>M S Dhoni</td>
                 <td>60</td>
-                <td>Gay</td>
+                <td>Male</td>
                 <td>African</td>
                 <td>RCB</td>
                 <td>10</td>
